syntax="proto3";

option csharp_namespace = "UserManagementSystem.Grpc";

service UserRegistryService {
    rpc UserPrimaryStream(stream RegistryRequest) returns (stream RegistryResponse);
    rpc UserOverflowStream(stream RegistryRequest) returns (stream RegistryResponse);
}

message RegistryRequest {
    string name = 1;
    string email = 2;
    string entity = 3;
}

message RegistryResponse {
    string status = 2;
}